<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/avengers_logo" />

    <EditText
        android:id="@+id/etusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imglogo"
        android:layout_margin="10dp"
        android:hint="@string/mobile_number"
        android:textColorHint="@color/black"
        android:inputType="phone"
        android:padding="15dp"
        android:maxLength="10"
        android:maxLines="1"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etusername"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:padding="15dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="20sp"
        android:textColor="@color/black"/>


    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etpassword"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#000000"
        android:text="@string/login"
        android:textColor="#e0f2f1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtforgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnlogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/register_yourself"
        android:textSize="18sp" />


</RelativeLayout>